--- a/globals-html/index.html
+++ b/globals-html/index.html
@@ -10,16 +10,18 @@
 
 <body>
     <header>
+        <div id="logo">
+            <img id="logoImg" src="./imagens/FREDIE_editado.png">
+            <h1 id="logoText">YBY</h1>        
+        </div> 
         <nav>
-            <img src="./imagens/FREDIE_editado.png">
-            <h1 id="logo">YBY</h1>         
             <ul>
-               <li><a href="index.html">Início</a></li>
-               <li><a href="#">Serviços</a></li>
-               <li><a href="#">Login</a></li>
-               <li><a href="#">Contato</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
-         </nav>
+        </nav>
     </header>
     <main>
         <div id="navLateral">
@@ -65,8 +67,8 @@
                     <div>
                         <a href="#">
                             <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
+                            <h3>Macaco</h3>
+                            <p>Banana</p>
                         </a>
                     </div>
                 </div>
@@ -84,61 +86,7 @@
                         <a href="#">
                             <img src="">
                             <h3>Titulo</h3>
-                            <p>texto</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="vendedor">
-                    <div>
-                        <a href="#">
-                            <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="vendedor">
-                    <div>
-                        <a href="#">
-                            <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="vendedor">
-                    <div>
-                        <a href="#">
-                            <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="vendedor">
-                    <div>
-                        <a href="#">
-                            <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="vendedor">
-                    <div>
-                        <a href="#">
-                            <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="vendedor">
-                    <div>
-                        <a href="#">
-                            <img src="">
-                            <h3>Titulo</h3>
-                            <p>texto</p>
+                            <p>Texto</p>
                         </a>
                     </div>
                 </div>
