--- a/globals-html/cadastro.html
+++ b/globals-html/cadastro.html
@@ -17,9 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +42,7 @@
         </div>
     </main>
     <footer>
-        <p>Footer a ser feito</p>
+        <p>Participantes do grupo: Gabriel Oliveira Rodrigues , Gabriel Riqueto , Lucas Vinicius de Almeida Brigida , Leandro Ferreira De Morais</p>
     </footer>
     <script src="script.js"></script>
 </body>
