--- a/globals-html/index.html
+++ b/globals-html/index.html
@@ -17,9 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -56,8 +55,8 @@
             <div id="itens">
                 <div class="vendedor">
                     <div>
-                        <a href="#">
-                            <img src="/imagens/Zé-Leôncio-Fazenda.webp">
+                        <a href="fazendeiroexemplo.html">
+                            <img src="imagens/Zé-Leôncio-Fazenda.webp">
                             <h3>Fazendeiro</h3>
                             <p>produz ameixa</p>
                         </a>
@@ -122,7 +121,7 @@
         </div>
     </main>
     <footer>
-        <p>Footer a ser feito</p>
+        <p>Participantes do grupo: Gabriel Oliveira Rodrigues , Gabriel Riqueto , Lucas Vinicius de Almeida Brigida , Leandro Ferreira De Morais</p>
     </footer>
     <script src="script.js"></script>
 </body>
